fixing gallery width on mobiles

--- a/styles/components/main-gallery.scss
+++ b/styles/components/main-gallery.scss
@@ -59,3 +59,14 @@
         }
     }
 }
+
+#c-main-gallery-content_images {
+    max-width: 80%;
+    width: 100%;
+    margin: auto;
+
+    @media only screen and (max-width: 659px) {
+        max-width: 100%;
+        width: 100%;
+    }
+}
